# apriltag_map_service

./: CMakeLists.txt  README.md  package.xml  setup.py
ipython/: TestAprilTagMap.ipynb  simaprilpose.json  testaprilpose.json
ipython/.ipynb_checkpoints/: TestAprilTagMap-checkpoint.ipynb
launch/: apriltag3_and_map.launch  map_sim.launch  rosrun_pose_lookup_for_map.launch
msg/: AprilMapPose.msg  AprilTagMapPose.msg
scripts/: pose_lookup_for_map.py
